# semarust

./: .env.example  .gitignore  API.md  AUTH.md  BACKUP_RESTORE.md  BUGFIX_REPORT_2026_03_16.md  BUILD_ERRORS.md  BUILD_FIX_PLAN.md  BUILD_FIX_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CONFIG.md  CONTRIBUTING.md  CRUD_DEMO.md  CRUD_DEMO_EXTENDED.md  CRUD_ENTITIES.md  CRUD_TESTS.md  DEMO_DATA.md  DESKTOP_APP.md  DEVELOPMENT_PLAN.md  DOCKER_DEMO.md  DOCUMENTATION_UPDATE_PLAN.md  Dockerfile  Dockerfile.demo  FINAL_FIX_REPORT_2026_03_16.md  FINAL_REPORT_2026_03_17.md  FUTURE_PLANS.md  GRAPHQL_API.md  GRPC_API.md  INCOMPLETE_TASKS_2026_03_17.md  KUBERNETES.md  MASTER_PLAN.md  MASTER_PLAN_V3.md  MIDDLEWARE.md  PERFORMANCE.md  PLAN_FURTHER_WORK.md  PLAYBOOK_API.md  PLAYBOOK_COMPLETE.md  PLAYBOOK_VALIDATION.md  PLUGINS.md  (+54 more)
.claude/: settings.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
mcp/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp/src/: client.rs  main.rs  protocol.rs  server.rs
mcp/src/tools/: ai_analyzer.rs  analytics.rs  audit.rs  environments.rs  inventory.rs  keys.rs  mod.rs  playbooks.rs  projects.rs  repositories.rs  runners.rs  schedules.rs  tasks.rs  templates.rs
mcp/src/velum_mcp/: __init__.py  client.py  server.py
mcp/src/velum_mcp/analysis/: ai_analyzer.py
mcp/src/velum_mcp/tools/: analytics.py  audit.py  environments.py  inventory.py  keys.py  playbooks.py  projects.py  repositories.py  runners.py  schedules.py  tasks.py  templates.py
rust/: Cargo.toml  build.rs  build.sh
rust/proto/: semaphore.proto
rust/scripts/: analyze_go_deps.sh  replace_random_usage.sh
rust/src/: cache.rs  lib.rs  main.rs
rust/src/api/: apps.rs  cache.rs  events.rs  extractors.rs  integration.rs  mod.rs  options.rs  routes.rs  runners.rs  state.rs  store_wrapper.rs  user.rs  users.rs  websocket.rs
rust/src/api/graphql/: mod.rs  mutation.rs  query.rs  schema.rs  subscription.rs  types.rs
rust/src/api/handlers/: access_key.rs  ai.rs  analytics.rs  auth.rs  cost_estimate.rs  credential_type.rs  environment.rs  inventory.rs  mailer.rs  metrics.rs  mod.rs  oidc.rs  plan_approval.rs  playbook.rs  playbook_runs.rs  repository.rs  state_backend.rs  tasks.rs  templates.rs  tests.rs  tests_common.rs  totp.rs  users.rs
rust/src/api/handlers/projects/: backup_restore.rs  environment.rs  integration.rs  inventory.rs  invites.rs  keys.rs  mod.rs  notifications.rs  project.rs  repository.rs  roles.rs  schedules.rs  secret_storages.rs  tasks.rs  templates.rs  users.rs
rust/src/api/mcp/: handler.rs  mod.rs  protocol.rs  tools.rs
rust/src/api/middleware/: cache.rs  mod.rs  security_headers.rs
rust/src/cli/: cmd_runner.rs  cmd_server.rs  cmd_setup.rs  cmd_version.rs  fill_demo_data.rs  mod.rs
rust/src/config/: config_auth.rs  config_helpers.rs  config_sysproc.rs  defaults.rs  loader.rs  mod.rs  types.rs
rust/src/db/: mock.rs  store.rs
rust/src/db/bolt/: access_key.rs  bolt_db.rs  event.rs  mod.rs  project.rs  schedule.rs  session.rs  task.rs  template.rs  user.rs
rust/src/db/sql/: README.md  access_key.rs  audit_log.rs  environment.rs  event.rs  init.rs  integration_crud.rs  integration_extract.rs  integration_matcher.rs  inventory.rs  migrations.rs  mod.rs  project.rs  project_invite.rs  queries.rs  repository.rs  runner.rs  schedule.rs  session.rs  task_crud.rs  task_output.rs  task_stage.rs  template_crud.rs  template_roles.rs  template_utils.rs  template_vault.rs  terraform_inventory.rs  test_helpers.rs  types.rs  user_auth.rs  user_crud.rs  user_totp.rs  utils.rs  view.rs  webhook.rs
rust/src/db/sql/managers/: access_key.rs  connection.rs  cost_estimate.rs  credential_type.rs  drift.rs  environment.rs  event.rs  hook.rs  integration.rs  integration_matcher.rs  inventory.rs  ldap_group.rs  migration.rs  mod.rs  notification.rs  options.rs  plan_approval.rs  playbook.rs  playbook_run.rs  project.rs  project_invite.rs  repository.rs  runner.rs  schedule.rs  session.rs  snapshot.rs  state_backend.rs  task.rs  template.rs  terraform.rs  token.rs  user.rs  view.rs  webhook.rs  workflow.rs
rust/src/db/sql/postgres/: environment.rs  inventory.rs  project.rs  repository.rs  template.rs  user.rs
rust/src/db/sql/sqlite/: environment.rs  inventory.rs  project.rs  repository.rs  template.rs
rust/src/db_lib/: ansible_app.rs  app_factory.rs  cmd_git_client.rs  git_client_factory.rs  go_git_client.rs  shell_app.rs  terraform_app.rs
rust/src/grpc/: mod.rs  server.rs  services.rs
rust/src/kubernetes/: client.rs  config.rs  helm.rs  job.rs  mod.rs
rust/src/models/: access_key.rs  ansible.rs  cost_estimate.rs  credential_type.rs  environment.rs  event.rs  inventory.rs  mod.rs  project.rs  project_invite.rs  repository.rs  role.rs  secret_storage.rs  session.rs  task.rs  template.rs  terraform_state.rs  user.rs  view.rs
rust/src/plugins/: base.rs  mod.rs  wasm_loader.rs
rust/src/plugins/wasm_examples/: README.md
rust/src/plugins/wasm_examples/hook_logger/: Cargo.toml
rust/src/plugins/wasm_examples/hook_logger/src/: lib.rs
rust/src/pro/: mod.rs
rust/src/pro/api/: controllers.rs  mod.rs
rust/src/pro/db/: mod.rs
rust/src/pro/services/: mod.rs  server.rs
rust/src/services/: access_key_installer.rs  alert.rs  backup.rs  cache_service.rs  exporter.rs  exporter_main.rs  key_encryption.rs  metrics.rs  metrics_tests.rs  mod.rs  playbook_run_service.rs  playbook_run_status_service.rs  playbook_sync_service.rs  restore.rs  ssh_agent.rs  ssh_auth_service.rs  task_pool.rs  task_pool_queue.rs  task_pool_runner.rs  task_pool_status.rs  task_pool_types.rs  totp.rs  webhook.rs  webhook_tests.rs
rust/src/services/local_job/: args.rs  cli.rs  environment.rs  repository.rs  run.rs  ssh.rs  types.rs  vault.rs
rust/src/services/runners/: mod.rs
rust/src/services/server/: mod.rs
rust/src/services/task_runner/: errors.rs  lifecycle.rs  logging.rs
rust/src/services/telegram_bot/: mod.rs
rust/src/utils/: app.rs
rust/src/validators/: mod.rs  playbook_validator.rs
rust/tests/: api_integration.rs
(+116 files in other folders)
