[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velum-mcp"
version = "1.0.0"
description = "MCP server for Velum — AI-native control of Ansible, Terraform and DevOps automation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.4",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
velum-mcp = "velum_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/velum_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
